# phreeqc

./: .gitignore  .gitlab-ci.yml  Conc.cxx  Conc.h  ExchComp.cxx  ExchComp.h  Exchange.cxx  Exchange.h  Form1.h  Form2.h  GasPhase.cxx  ISolution.cxx  ISolution.h  Isotope.cxx  Isotope.h  Kinetics.cxx  Kinetics.h  KineticsComp.cxx  KineticsComp.h  KineticsCxx.cxx  Makefile  Makefile.am  Mix.cxx  NameDouble.cxx  NameDouble.h  NumKeyword.cxx  NumKeyword.h  PHRQ_io_output.cpp  PPassemblage.cxx  PPassemblage.h  PPassemblageComp.cxx  PPassemblageComp.h  Parser.cxx  Parser.h  Pe_Data.cxx  Pe_Data.h  RELEASE.TXT  Reaction.cxx  Reaction.h  ReadClass.cpp  (+133 more)
.github/: subtrees.json
COMManuscript/: Module.doc  Module1.doc  Post_Colleague_review.doc  Refs.doc  Transmittal.doc  figexcel.doc  tables.doc
Debug/: vc60.idb  xml.ilk
classes/: Conc.cxx  Conc.h  Isotope.cxx  Isotope.h  Makefile  NumKeyword.cxx  NumKeyword.h  Pe_Data.cxx  Pe_Data.h  Solution.cxx  Solution.h
database/: CMakeLists.txt
database/basic/: iso2revised.bas  iso3revised.bas  iso4revised.bas
doc/: README.TXT  phreeqc.txt
examples/: Makefile  ex1.out  ex10.out  ex11.out  ex12.out  ex12.sel  ex12a.out  ex12a.sel  ex13a.out  ex13b.out  ex13c  ex13c.out  ex14.out  ex15.out  ex16.out  ex17.out  ex18.out  ex2.out  ex2.sel  ex3.out  ex4.out  ex5.out  ex6.out  ex6A-B.sel  ex7.out  ex7.sel  ex8.out  ex9.out
msi/: Product.wxs
mytest/: Int_vs_Don.out  Makefile  Vendome.pat  a_e_t2.out  aj1  aj1.out  alkalinity  alkalinity.out  all_llnl.out  aquia.out  aquia.prn  as.ex  as.ex.out  ball  ball.out  basic_test.out  brown.out  calc_SC.out  calcite  cd_ddl.out  cdmus3.out  cdmusic_related.out  co2  co2.out  colloid_U.out  colloid_u.sel  colt1  colt1.out  colt2  colt2.out  colt2.prn  colt3  colt3.out  colt3.prn  colt3_mi.out  colt4  colt4.out  colt5  colt5.out  comments  (+241 more)
mytest_pc/: 2007-saturation-indices.sel  Int_vs_Don  Int_vs_Don.out  Int_vs_Don.sel  Makefile  Vendome.lon  Vendome.pat  a_e_t2.out  aj1.out  alkalinity.out  all_llnl.out  aquia  aquia.out  aquia.prn  as.ex.out  asf  ball.out  basic_test  basic_test.out  brown.out  calc_SC.out  cd_ddl  cd_ddl.out  cdmusic_related.out  co2.out  colloid_U.out  colloid_u.sel  colt1  colt1.out  colt1.prn  colt2  colt2.out  colt2.prn  colt3  colt3.out  colt3_mi  colt3_mi.out  colt3_mi.prn  colt4  (+225 more)
(+400 files in other folders)
