# install (database)
install(FILES Amm.dat       DESTINATION database)
install(FILES iso.dat       DESTINATION database)
install(FILES llnl.dat      DESTINATION database)
install(FILES minteq.dat    DESTINATION database)
install(FILES minteq.v4.dat DESTINATION database)
install(FILES phreeqc.dat   DESTINATION database RENAME phast.dat)
install(FILES pitzer.dat    DESTINATION database)
install(FILES sit.dat       DESTINATION database)
install(FILES wateq4f.dat   DESTINATION database)
