# install (database)
if (NOT DATABASE_DIR)
  set(DATABASE_DIR database)
endif()
install(FILES Amm.dat       DESTINATION ${DATABASE_DIR})
install(FILES iso.dat       DESTINATION ${DATABASE_DIR})
install(FILES llnl.dat      DESTINATION ${DATABASE_DIR})
install(FILES minteq.dat    DESTINATION ${DATABASE_DIR})
install(FILES minteq.v4.dat DESTINATION ${DATABASE_DIR})
install(FILES phreeqc.dat   DESTINATION ${DATABASE_DIR} RENAME phast.dat)
install(FILES pitzer.dat    DESTINATION ${DATABASE_DIR})
install(FILES sit.dat       DESTINATION ${DATABASE_DIR})
install(FILES wateq4f.dat   DESTINATION ${DATABASE_DIR})
